handel submit buttom

--- a/Views/Clients/_Form.cshtml
+++ b/Views/Clients/_Form.cshtml
@@ -42,7 +42,7 @@
             <select class="form-select js-select2" asp-for="MaritalStatusId" asp-items="@Model.SelectStatus">
             <option>Select</option>
                 </select>
-            <label asp-for="SelectStatus"></label>
+            <label asp-for="StatusName"></label>
         </div>
         <span asp-validation-for="SelectStatus" class="text-danger d-block"></span>
     </div>
